--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node-sass": "^4.14.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "css": "node-sass --watch css.scss css.css"
   },
   "author": "Olivia Helmuth",
   "license": "ISC"
